#31: Build with Java 11, phase 1